moved folders and now snake can die if it collides with itself or border